--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,14 +26,11 @@ ul{
     margin-bottom: 0px;
 }
 
-h3 {
-    margin-top: 0px;
-    margin-bottom: 10px;
-}
 
 h3{
-    margin-top: 20px;
-    margin-left: 24px;
+    margin: 0px;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .icon::before{
